# human-instance-segmentation

./: .envrc  .gitignore  ACTIVATION_FUNCTION_SWITCHING.md  ADVANCED_FEATURES_SUMMARY.md  CLAUDE.md  DISTILLATION.md  MIXED_ACTIVATION_FUNCTIONS.md  NEW_ARCHITECTURES_SUMMARY.md  PROGRESSIVE_UNFREEZING.md  README.md  README_ja.md  README_jp.md  RGB_B0_FROM_B3_TEMP_PROG_ARCHITECTURE.md  ROIBase_Model_Code_Generation_Requirements.md  Refine_the_Binary_Mask.md  TEMPERATURE_KL_LOSS_ANALYSIS.md  TEMPERATURE_SOFT_HARD_TARGETS.md  TEMP_PROG_CONFIG.md  YOLO_FEATURE_DISTILLATION.md  YOLO_FEATURE_DISTILLATION_JP.md  activate.sh  add_gradient_monitoring.py  add_refined_training_config.py  analysis_early_divergence.md  analyze_dataset_bboxes.py  analyze_dataset_quality_mismatch.py  analyze_double_normalization.py  analyze_feature_outputs.py  analyze_hierarchical_training.py  analyze_model_complexity.py  analyze_pixel_ratio.py  analyze_pretrained_unet.py  analyze_roi_sizes.py  analyze_teacher_low_quality.py  analyze_temperature_kl_effect.py  analyze_training.py  check_bn_training_mode.py  check_frozen_params.py  check_groupnorm.py  check_logit_computation.py  (+92 more)
onnx_models/: README.md
roi_analysis_full/: roi_analysis_results.json
src/human_edge_detection/: __init__.py  analyze_data.py  analyze_data_full.py  augmentations.py  bilateral_filter.py  dataset.py  dataset_adapter.py  dynamic_roi_align.py  edge_smoothing.py  export_onnx.py  export_onnx_advanced.py  export_onnx_advanced_auxiliary.py  feature_extractor.py  filtered_dataset.py  losses.py  model.py  model_layernorm.py  train.py  (+6 more)
(+30 files in other folders)
